# MidiPredict

./: CMakeLists.txt  Makefile  MidiPredict.jucer  README.md
Resources/: MidiPredict.xml  ladispute_1.mid  ladispute_2.mid  ladispute_3.mid  ladispute_4.mid  ladispute_5.mid  ladispute_paused.mid
Source/: PluginProcessor.cpp  PluginProcessor.h  SineWaveSound.cpp  SineWaveVoice.cpp  SynthAudioSource.cpp  SynthAudioSource.h
